# livekit-voice-agent

./: .dockerignore  .gitignore  COMPLETE_OAUTH_AUTHENTICATION.md  COOLIFY_AUTHENTICATION_GUIDE.md  COOLIFY_FULL_DEPLOYMENT.md  DEBUG_MCP_CONNECTION.md  Dockerfile  Dockerfile-api  Dockerfile-toolbox  GOOGLE_CALENDAR_INTEGRATION_GUIDE.md  GOOGLE_CALENDAR_SETUP.md  GOOGLE_OAUTH_CONSENT_FIX.md  HTTP_TRANSPORT_FIX.md  REACT_NATIVE_INTEGRATION.md  TESTING_GUIDE.md  agent.py  api.py  clear_postgres_db.py  create_volunteers_db.py  datetime_tools.py  docker-compose.yaml  docker-compose.yml  get_refresh_token.py  google_calendar_tools.py  migrate_to_postgres.py  pyproject.toml  requirements.txt  test_azure.py  tools.yaml  view_postgres_data.py  volunteers.db
