[project]
name = "livekit-voice-agent-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "av<16.0.0",
    "livekit-agents[deepgram,openai,silero,turn-detector,mcp]~=1.2",
    "livekit-plugins-noise-cancellation~=0.2",
    "python-dotenv>=1.1.1",
]
