[project]
name = "livekit-voice-agent-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "av<16.0.0",
    "google-api-python-client>=2.185.0",
    "google-auth>=2.41.1",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "livekit-agents[deepgram,openai,silero,turn-detector,mcp]~=1.2",
    "livekit-plugins-noise-cancellation~=0.2",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.1.1",
]
